admission/ValidatingAdmissionPolicy/policies/prestop-httpget-host/initcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: prestop-httpget-host-initcontainers
  annotations:
    kubeapt.io/uuid: "7d575081-c91e-4b00-a7bb-755aa906d04b"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
